--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -1,1 +1,10 @@
 @import 'bootstrap.scss';
+
+@import 'variables.scss';
+@import 'colors.scss';
+@import 'typography.scss';
+@import 'breakpoints.scss';
+
+@import 'global.scss';
+
+@import 'surveys.scss';
