Add completion indicator

--- a/packages/stateofjs/lib/stylesheets/_surveys.scss
+++ b/packages/stateofjs/lib/stylesheets/_surveys.scss
@@ -22,6 +22,9 @@
     font-weight: bold;
   }
 }
+.section-nav-item-completion{
+  font-weight: bold;
+}
 .section-questions{
   max-width: 800px;
   margin: 0 auto;
