--- a/packages/stateofjs/lib/stylesheets/_global.scss
+++ b/packages/stateofjs/lib/stylesheets/_global.scss
@@ -17,18 +17,14 @@ body {
   // background: linear-gradient(180deg, rgb(30, 32, 32) 0%, rgb(55, 58, 58) 100%) fixed;
   @include primary-font;
   @include small {
-      font-size: $root-size-mobile;
+    font-size: $root-size-mobile;
   }
   @include large {
-      font-size: $root-size;
-      // border: 10px solid $active-color;
-      // padding: 10px;
-      min-height: 100vh;
+    font-size: $root-size;
+    // border: 10px solid $active-color;
+    // padding: 10px;
+    min-height: 100vh;
   }
-}
-
-.modal-content{
-  color: $text-color-inverted;
 }
 
 h1,
@@ -46,10 +42,10 @@ ul,
 ol {
   margin: 0 0 $spacing 0;
   @include small {
-      line-height: 1.6;
+    line-height: 1.6;
   }
   @include medium-large {
-      line-height: 1.8;
+    line-height: 1.8;
   }
 }
 
@@ -62,23 +58,23 @@ a {
   &:visited,
   &:active,
   &:focus {
-      @include small {
-          color: $link-color;
-      }
-      @include medium-large {
-          color: $link-color;
-      }
+    @include small {
+      color: $link-color;
+    }
+    @include medium-large {
+      color: $link-color;
+    }
   }
   &:hover {
-      text-decoration: underline;
-      position: relative;
-      color: $hover-color;
+    text-decoration: underline;
+    position: relative;
+    color: $hover-color;
   }
   &.button,
   &.resp-sharing-button__link {
-      &:hover {
-          animation: none;
-      }
+    &:hover {
+      animation: none;
+    }
   }
   position: relative;
 
@@ -117,46 +113,53 @@ a {
 Page-specific styles
 
 */
-.PageLayout--introduction{
-  .block__content{
-      p:first-child{
-          @include medium-large{
-              font-size: $larger-font;
-          }
+.PageLayout--introduction {
+  .block__content {
+    p:first-child {
+      @include medium-large {
+        font-size: $larger-font;
       }
+    }
   }
 }
 
-.desktop{
-  @include small{
-      display: none;
+.desktop {
+  @include small {
+    display: none;
   }
 }
-.mobile{
-  @include medium-large{
-      display: none;
+.mobile {
+  @include medium-large {
+    display: none;
   }
 }
 
-.main-logo-wrapper{
+.main-logo-wrapper {
   max-width: 500px;
-  margin: 0 auto $spacing*2 auto;
+  margin: 0 auto $spacing * 2 auto;
 }
 
-.header{
+.header {
   padding: 20px;
 }
-.main-contents{
+.main-contents {
   padding: 20px;
 }
 
-.datatable-above{
+.datatable-above {
   display: flex;
   justify-content: space-between;
-  .form-group{
+  .form-group {
     max-width: 200px;
   }
-  .modal-trigger{
+  .modal-trigger {
     margin-left: 20px;
+  }
+}
+
+.modal-content {
+  &,
+  .btn {
+    color: $text-color-inverted;
   }
 }
