More UI improvements

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -1,3 +1,7 @@
+.form-control{
+  background: $bg-color-lightest;
+}
+
 .survey-section {
   .form-group {
     margin-bottom: $spacing;
@@ -10,21 +14,28 @@
   }
   .form-check {
     display: flex;
-    padding: $spacing/2;
+    align-items: center;
+    padding: 0 $spacing/2;
     &:last-of-type {
       margin: 0;
     }
     &:hover {
       background: $bg-color-light;
     }
+    &.form-check-checked{
+
+    }
+    &.form-check-unchecked{
+      opacity: 0.3;
+    }
   }
   .form-check-input {
-    margin-left: 0;
+    margin: -3px $spacing/1.5 0 0;
     position: static;
-    margin-right: $spacing/2;
   }
   .form-check-label {
     flex: 1;
+    padding: $spacing/2 0;
   }
   .form-item-contents {
     display: flex;
