--- a/packages/stateofjs/lib/stylesheets/_accounts.scss
+++ b/packages/stateofjs/lib/stylesheets/_accounts.scss
@@ -1,4 +1,9 @@
 .accounts-ui{
+  .fields{
+    .field{
+      margin-bottom: $spacing;
+    }
+  }
   .buttons{
     .btn-primary{
       width: 100%;
@@ -8,15 +13,20 @@
       display: block;
       text-align: center;
       margin-bottom: $spacing/2;
-      &.accounts-button-sign-up{
-
-      }
-      &.accounts-button-sign-in{
-
-      }
-      &.accounts-button-forgot-password{
-
-      }
+      font-size: $smallish-font;
     }
+  }
+}
+
+.account-message{
+  margin-top: $spacing*2;
+  h4{
+    font-size: $large-font;
+  }
+  p, li{
+    font-size: $smallish-font;
+  }
+  ul:last-child, p:last-child{
+    margin-bottom: 0;
   }
 }
