--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -69,6 +69,7 @@ $contrast-color-dark: $redDark;
 $bg-color: $greyDarker;
 $bg-color-light: $greyDarkish;
 $bg-color-lighter: $greyMediumer;
+$bg-color-lightest: $greyLight;
 
 $border-color: $greyMedium;
 $dark-border-color: $greyDark;
