--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -9,6 +9,7 @@
 @import '_forms.scss';
 @import '_buttons.scss';
 @import '_datatable.scss';
+@import '_spinner.scss';
 
 @import '_global.scss';
 @import '_layout.scss';
