Add sentry; more styling tweaks and refactorings

--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -5,6 +5,7 @@
 $greyLight: #e0e4e4;
 $grey: #e1e1e1;
 $greyMedium: #cecdcc;
+$greyMediumish: #9e9c9a;
 $greyMediumer: #616868;
 $greyDark: #4d4f4f;
 $greyDarkish: #2c3030;
@@ -75,7 +76,7 @@ $border-color: $greyMedium;
 $dark-border-color: $greyDark;
 
 $text-color: $grey;
-$text-color-dark: $greyMedium;
+$text-color-dark: $greyMediumish;
 $text-color-inverted: $greyDarkish;
 
 $link-color: $active-color;
