Add browser stats tracking

--- a/packages/stateofjs/lib/stylesheets/_buttons.scss
+++ b/packages/stateofjs/lib/stylesheets/_buttons.scss
@@ -64,7 +64,9 @@
     .datatable-list & {
       color: $text-color-inverted;
     }
-
+    .modal-dialog &{
+      color: $text-color-inverted;
+    }
     &.loading-button-loading{
       background: $greyMediumer;
       cursor: default;
