--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -10,6 +10,7 @@
 @import '_buttons.scss';
 @import '_datatable.scss';
 @import '_spinner.scss';
+@import '_share.scss';
 
 @import '_global.scss';
 @import '_layout.scss';
