--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -15,5 +15,6 @@
 @import '_global.scss';
 @import '_layout.scss';
 
+@import '_survey_page.scss';
 @import '_surveys.scss';
 @import '_accounts.scss';
