--- a/packages/stateofjs/lib/stylesheets/main.scss
+++ b/packages/stateofjs/lib/stylesheets/main.scss
@@ -14,6 +14,7 @@
 
 @import '_global.scss';
 @import '_layout.scss';
+@import '_header.scss';
 
 @import '_survey_page.scss';
 @import '_surveys.scss';
