--- a/packages/stateofjs/lib/stylesheets/_accounts.scss
+++ b/packages/stateofjs/lib/stylesheets/_accounts.scss
@@ -7,7 +7,8 @@
   .buttons{
     .btn-primary{
       width: 100%;
-      margin-bottom: $spacing/2;
+      max-width: 200px;
+      margin: $spacing auto $spacing auto !important;
     }
     a{
       display: block;
