--- a/packages/stateofjs/lib/stylesheets/_header.scss
+++ b/packages/stateofjs/lib/stylesheets/_header.scss
@@ -1,5 +1,5 @@
 .nav-wrapper {
-  margin: 0 $spacing $spacing $spacing;
+  margin: $spacing;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,6 +7,7 @@
 }
 .navbar {
   padding: 0;
+  position: relative;
 }
 .navbar-nav {
   width: 100%;
@@ -14,12 +15,26 @@
 .navbar-dark .navbar-toggler {
   @include border;
   @include border-radius;
-  padding: $spacing/2;
+  padding: 5px;
 }
 
 .nav-item {
   margin-right: $spacing;
 }
-.nav-item-locale{
+.nav-item-locale {
   padding: $spacing 0;
+}
+
+.navbar-collapse {
+  @include small-medium {
+    position: absolute;
+    padding: $spacing;
+    @include border;
+    @include border-radius;
+    background: var(--bg-color);
+    top: 100%;
+    z-index: 1;
+    width: calc(100vw - #{$spacing * 2});
+    text-align: center;
+  }
 }
