Add read-only message

--- a/packages/stateofjs/lib/stylesheets/_colors.scss
+++ b/packages/stateofjs/lib/stylesheets/_colors.scss
@@ -43,6 +43,7 @@ $redLight: #fc8f8f;
 $red: #fe6a6a;
 $redDark: #ec5555;
 $redDarker: #be3737;
+$redTransparent: rgba(254, 106, 106, 0.3);
 
 $yellow: #fbf34c;
 $yellowDark: #d4cc33;
