--- a/packages/stateofjs/lib/stylesheets/_typography.scss
+++ b/packages/stateofjs/lib/stylesheets/_typography.scss
@@ -6,6 +6,7 @@ $small-font: 0.8rem;
 $smallish-font: 0.9rem;
 $medium-font: 1rem;
 $large-font: 1.1rem;
+$largeish-font: 1.3rem;
 $larger-font: 1.5rem;
 $largest-font: 2rem;
 
