--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -18,7 +18,7 @@
       font-size: $large-font;
     }
     @include large {
-      font-size: $larger-font;
+      font-size: $largeish-font;
     }
     @include font-bold;
   }
