Add <code> to question titles

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -25,6 +25,9 @@
       font-size: $largeish-font;
     }
     @include font-bold;
+    code {
+      font-size: $medium-font;
+    }
   }
   .form-check {
     display: flex;
