Use images for emojis

--- a/packages/stateofjs/lib/stylesheets/_forms.scss
+++ b/packages/stateofjs/lib/stylesheets/_forms.scss
@@ -12,7 +12,7 @@
       padding: $spacing;
     }
     margin-bottom: $spacing;
-    &:focus-within{
+    &:focus-within {
       border-color: var(--link-color);
       background: $greyDarkish;
     }
@@ -88,10 +88,11 @@
     button:first-child {
       // margin-right: $spacing;
     }
-    .form-btn-prev, .prev-placeholder{
+    .form-btn-prev,
+    .prev-placeholder {
       order: 1;
     }
-    .form-btn-next{
+    .form-btn-next {
       order: 2;
     }
   }
@@ -112,6 +113,11 @@
       flex: 0;
       padding: 3px;
       @include border-radius;
+      @include emoji-font;
+    }
+    img {
+      height: 32px;
+      width: 32px;
     }
   }
 }
